添加订单写完，准备写获取订单和去支付

--- a/women/project.config.json
+++ b/women/project.config.json
@@ -8,5 +8,25 @@
 	},
 	"appid": "wxc9713edb30ef6b8e",
 	"projectname": "demo",
-	"condition": {}
+	"condition": {
+		"search": {
+			"current": -1,
+			"list": []
+		},
+		"conversation": {
+			"current": -1,
+			"list": []
+		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
+		"game": {
+			"list": []
+		},
+		"miniprogram": {
+			"current": -1,
+			"list": []
+		}
+	}
 }
